Fix title alignment

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -158,11 +158,11 @@ ol li {
     }
     .large-image h2 {
         font-size: 140%;
-        margin: 0.5em 0 0.5em 2.7em;
+        margin: 0.5em 0 0.5em 2.6em;
     }
     .large-image li {
         font-size: 90%;
-        margin: 0.3em 0 0.6em 4em;
+        margin: 0.3em 0 0.6em 4.1em;
     }
     .large-image a {
         color: inherit;
